added position = "fill" to the graph and also changed axis labels

--- a/src/group_38_ucsb_grad.Rmd
+++ b/src/group_38_ucsb_grad.Rmd
@@ -18,6 +18,7 @@ ucsb_grad <- read_csv(here("data", "ucsb_grad_data.csv"))
 ```{r}
 #Create a basic ggplot2 column graph showing the change in domestic graduate enrollment from 2008 to 2019 with the fill color dependent on race/ethnicity.
 ggplot(data = ucsb_grad, aes(x = year_abbr, y = domestic_enrollment)) +
-  geom_col(aes(fill = ethnicity))
+  geom_col(aes(fill = ethnicity), position = "fill") +
+  labs(x = "Year", y = "Domestic Enrollment")
 ```
 
